--- a/EntryNow.WebApp/Pages/Entries/Index.razor
+++ b/EntryNow.WebApp/Pages/Entries/Index.razor
@@ -44,7 +44,7 @@
                       <th>Name</th>
                       <th>Surname</th>
                       <th>Contact</th>
-                      <th>CNIC</th>
+                      @*<th>CNIC</th>*@
                       <th>Reference</th>
                       <th>UC</th>
                       <th>Taluka</th>
@@ -73,7 +73,7 @@
                                       <td>@entrie.Name</td>
                                       <td>@entrie.Surname</td>
                                       <td>@entrie.ContactNumber</td>
-                                      <td>@entrie.CNIC</td>
+                                      @*<td>@entrie.CNIC</td>*@
                                       <td>@entrie.Reference</td>
                                       <td>@entrie.UnionCounsil</td>
                                       <td>@entrie.Taluka</td>
