--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -41,7 +41,7 @@
                       <th>Name</th>
                       <th>Surname</th>
                       <th>Contact</th>
-                      <th>CNIC</th>
+                      @*<th>CNIC</th>*@
                       <th>Referenced By</th>
                       <th>Recommended</th>
                       <th>UC</th>
@@ -71,7 +71,7 @@
                                       <td>@entrie.Name</td>
                                       <td>@entrie.Surname</td>
                                       <td>@entrie.ContactNumber</td>
-                                      <td>@entrie.CNIC</td>
+                                      @*<td>@entrie.CNIC</td>*@
                                       <td>@entrie.ReferencedBy</td>
                                       <td>@entrie.Recommended</td>
                                       <td>@entrie.UnionCounsil</td>
