--- a/EntryNow.WebApp/Pages/Entries/Test.razor
+++ b/EntryNow.WebApp/Pages/Entries/Test.razor
@@ -56,11 +56,11 @@
                                   <InputText @bind-Value="model.Name" class="form-control" />
                                   <ValidationMessage For="@(() => model.Name)" />
                               </div>
-                              <div class="form-group">
+                              @*<div class="form-group">
                                   <label>Email</label>
                                   <InputText @bind-Value="model.EmailAddress" class="form-control" />
                                   <ValidationMessage For="@(() => model.EmailAddress)" />
-                              </div>
+                              </div>*@
                               <div class="form-group">
                                   <label>City</label>
                                   <select class="form-control select2" style="width: 100%;" @bind="model.City">
@@ -107,11 +107,11 @@
                                         }
                                   </select>*@
                               </div>
-                              <div class="form-group">
+                              @*<div class="form-group">
                                   <label>CNIC</label>
                                   <InputText @bind-Value="model.CNIC" class="form-control" />
                                   <ValidationMessage For="@(() => model.CNIC)" />
-                              </div>
+                              </div>*@
                              <div class="form-group">
                                   <label>Taluka</label>
                                   @*<select class="form-control select2" style="width: 100%;" @onchange="@FillUcDropDown">*@
@@ -141,7 +141,7 @@
                                     <InputText @bind-Value="model.ContactNumber" class="form-control" data-inputmask='"mask": "0399-999 9999"' data-mask />
                                   </div>
                                 </div>
-                                <div class="form-group">
+                                @*<div class="form-group">
                                   <label>District</label>
                                   <select class="form-control select2" style="width: 100%;" @bind="model.District">
                                         @if (string.IsNullOrEmpty(model.District))
@@ -157,7 +157,7 @@
                                             <option value="@district">@district</option>
                                         }
                                   </select>
-                              </div>
+                              </div>*@
                               <div class="form-group">
                                   <label>Union Council</label>
                                   <InputText @bind-Value="this.ucValue" class="form-control select2" @oninput="(e)=> AutoCompleteUC(e.Value.ToString())" list="_uc"/>
