--- a/EntryNow.Web/Pages/Entries/Test.razor
+++ b/EntryNow.Web/Pages/Entries/Test.razor
@@ -450,7 +450,11 @@
                     using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "reference/find?name=" + value))
                     {
                         string apiResponse = await response.Content.ReadAsStringAsync();
-                        this.referencesSearchList = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<SearchValues>>(apiResponse);
+                        IList<SearchValues> _referencesSearchList = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<SearchValues>>(apiResponse);
+                        if(_referencesSearchList != null)
+                        {
+                            this.referencesSearchList = _referencesSearchList;
+                        }
                     }
                 }
             }
@@ -783,6 +787,15 @@
     {
         AlertService.Clear();
         loading = true;
+        
+        if (string.IsNullOrEmpty(this.referenceValue))
+        {
+            AlertService.Error("Reference is required!", keepAfterRouteChange: true);
+            loading = false;
+            StateHasChanged();
+            return;
+        }
+
         try
         {
             if (await AddEntryAsync())
@@ -833,11 +846,11 @@
                 {
                     model.ReferenceId = item.Id;
                 }
-                else
-                {
-                    AlertService.Error("Incorrect Reference Entered!");
-                    return false;
-                }
+            }
+            if(model.ReferenceId==null)
+            {
+                AlertService.Error("Incorrect Reference Entered!");
+                return false;
             }
         }
         else
@@ -854,11 +867,11 @@
                             {
                                 model.ReferenceId = item.Id;
                             }
-                            else
-                            {
-                                AlertService.Error("Incorrect Reference Entered!");
-                                return false;
-                            }
+                        }
+                        if(model.ReferenceId==null)
+                        {
+                            AlertService.Error("Incorrect Reference Entered!");
+                            return false;
                         }
                     }
                 }
@@ -878,11 +891,11 @@
                 {
                     model.SurnameId = item.Id;
                 }
-                else
-                {
-                    AlertService.Error("Incorrect Surname Entered!");
-                    return false;
-                }
+            }
+            if(model.SurnameId==null)
+            {
+                AlertService.Error("Incorrect Surname Entered!");
+                return false;
             }
         }
         else
@@ -899,11 +912,11 @@
                             {
                                 model.SurnameId = item.Id;
                             }
-                            else
-                            {
-                                AlertService.Error("Incorrect Surname Entered!");
-                                return false;
-                            }
+                        }
+                        if(model.SurnameId==null)
+                        {
+                            AlertService.Error("Incorrect Surname Entered!");
+                            return false;
                         }
                     }
                 }
@@ -923,11 +936,11 @@
                 {
                     model.UnionCounsilId = item.Id;
                 }
-                else
-                {
-                    AlertService.Error("Incorrect Union Counsil Entered!");
-                    return false;
-                }
+            }
+            if(model.UnionCounsilId==null)
+            {
+                AlertService.Error("Incorrect UC Entered!");
+                return false;
             }
         }
         else
@@ -944,11 +957,11 @@
                             {
                                 model.UnionCounsilId = item.Id;
                             }
-                            else
-                            {
-                                AlertService.Error("Incorrect Union Counsil Entered!");
-                                return false;
-                            }
+                        }
+                        if(model.UnionCounsilId == null)
+                        {
+                            AlertService.Error("Incorrect Union Counsil Entered!");
+                            return false;
                         }
                     }
                 }
@@ -968,11 +981,11 @@
                 {
                     model.VillageId = item.Id;
                 }
-                else
-                {
-                    AlertService.Error("Incorrect Village Name Entered!");
-                    return false;
-                }
+            }
+            if(model.VillageId==null)
+            {
+                AlertService.Error("Incorrect Village Entered!");
+                return false;
             }
         }
         else
@@ -989,11 +1002,11 @@
                             {
                                 model.VillageId = item.Id;
                             }
-                            else
-                            {
-                                AlertService.Error("Incorrect Village Name Entered!");
-                                return false;
-                            }
+                        }
+                        if(model.VillageId == null)
+                        {
+                            AlertService.Error("Incorrect Village Entered!");
+                            return false;
                         }
                     }
                 }
